# ScraperServer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: build.yaml
cmake/modules/: AddCompileFlags.cmake  AddVersionMacro.cmake  CheckGitRemoteRoot.cmake  FetchContentImport.cmake
cmake/templates/: version.cmake
cmake/toolchains/: aarch64-linux-gnu.cmake  loongarch64-linux-gnu.cmake  mips64el-linux-gnuabi64.cmake  mips64el-neokylin-linux.cmake
config/: ScraperServer.json
src/: AbstractAPI.h  ApiManager.cpp  ApiManager.h  Backtrace.cpp  Backtrace.h  BuildInfo.h  CommonType.h  Config.cpp  Config.h  Control.cpp  Control.h  DataConvert.cpp  DataConvert.h  DataSource.cpp  DataSource.h  Demo.cpp  HDRToolKit.cpp  HDRToolKit.h  HttpRequestHandler.cpp  HttpRequestHandler.h  HttpServer.cpp  HttpServer.h  ISO-3611-1.h  Logger.cpp  Logger.h  Option.cpp  Option.h  ResourceManager.cpp  ResourceManager.h  ScraperServer.rc  SignalHandler.cpp  SignalHandler.h  TMDBAPI.cpp  TMDBAPI.h  Tmdb.cpp  Tmdb.h  Utils.cpp  Utils.h  iso-3611-1.h  main.cpp
web/: index.html
